scale back to begin reimplementation

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "unity-signals",
+  "name": "unitysignals",
   "version": "1.0.0",
   "displayName": "Unity Signals",
+  "description": "",
+  "unity": "2019.1",
   "author": {
     "name": "Daniel Loughmiller",
     "url": "https://github.com/DanLGameDev/"
