--- a/Tests/Editor/DGP.UnitySignals.Editor.Tests.asmdef
+++ b/Tests/Editor/DGP.UnitySignals.Editor.Tests.asmdef
@@ -6,5 +6,20 @@
     ],
     "includePlatforms": [
         "Editor"
-    ]
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
+        "excludePlatforms": [],
+        "allowUnsafeCode": false,
+        "overrideReferences": true,
+        "precompiledReferences": [
+        "nunit.framework.dll"
+    ],
+    "autoReferenced": false,
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
